--- a/modules/5507-03-hw.md
+++ b/modules/5507-03-hw.md
@@ -7,73 +7,24 @@ knit: (function(inputFile, encoding) {
   output_dir = "../results", output_format = "all") }) 
 ---
 
-### Assignments, due start of week 7
+### Assignments, due start of week 7 (start of week 4 in summer semester)
 
 #### Hw03
 
-Graded: 3 points, one point deducted if submitted late.
+Graded: 20 points, one point deducted if submitted late.
 
 Homework03.
 
-Having reviewed these analyses, I would like
-you to turn in some simple analyses that you
-run on a fresh data set. This homework
-assignment will be graded pass/fail.
+Q1. The file [energy01.csv][git1a] is a comma delimited file. Details about this file are in its [data dictionary][git1b]. Read this file into SAS and print the first three rows of data. 
 
-There is a second data set on sleep in
-mammals. You can find a brief description of
-this data set at
+Q2. The file [energy02.tsv][git2a] replaces the commas with tabs as delimiters. Details about this file are in its [data dictionary][git2b]. Read this file into SAS and print the first three rows of data. 
 
---> http://www.statsci.org/data/general/sleep.html
+Q3. The file [energy03.txt][git3a] is the same data but uses a fixed width format. Details about this file are in its [data dictionary][git3b]. Read this file into SAS and print the first three rows of data. 
 
-and you can download the actual data at
+Q4. The file [energy01.csv][git4a] is a comma delimited file, like above, but the variables names are included in the first row of data. Details about this file are in its [data dictionary][git4b]. Read this file into SAS and print the first three rows of data. 
 
---> http://www.statsci.org/data/general/sleep.txt
+Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git5].
 
-For every question, include the relevant SAS
-output and a brief written commentary explaining
-what the results mean. When you send your
-answers, please include the original questions.
-
-1. Notice that there is a huge range in body
-weight. Display the information for the
-smallest and the largest mammals.
-
-2. Which variables have missing data?
-
-3. Calculate the mean and standard deviation
-for TotalSleep.
-
-4. Draw a histogram for the BodyWt variable.
-Note that this variable is highly skewed.
-Re-draw the histogram on the log scale.
-For exta credit, relabel the axes with values
-at 0.001, 0.01, etc.
-
-5. Calculate the ratio of BrainWt to BodyWt
-and express it as a percentage. Be sure to
-convert grams to kilograms (or vice versa)
-before computing the ratio. What animal has
-the smallest/largest ratio?
-
-6. Do bigger animals sleep longer or live
-longer? Show your results using a correlation
-coefficient.
-
-7. Do animals who have high degrees of
-Predation, Exposure, or Danger sleep less?
-Show your results using a plot and a trendline.
-
-8. Place all the key results into a document
-and copy the original questions and include
-your own written answer along with the
-appropriate supporting tables or graphs.
-Do NOT submit uneditted and unannoted
-SAS output. You can use any program to
-prepare the output, but convert it to a PDF
-format before submission. If you have any
-difficulty producing a PDF document, please
-talk to me.
 
 #### Discuss03
 
@@ -92,3 +43,16 @@ I'd like some brief feedback to the videos you just watched. Keep it short. One 
 Graded: 3 points, one point deducted if submitted late.
 
 Not yet available.
+
+[git1a]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy01.csv
+[git2a]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy02.tsv
+[git3a]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy03.txt
+[git4a]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy04.csv
+
+[git1b]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy01-data-dictionary.yaml
+[git2b]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy02-data-dictionary.yaml
+[git3b]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy03-data-dictionary.yaml
+[git4b]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy04-data-dictionary.yaml
+
+[git5]: https://github.com/pmean/classes/blob/master/software-engineering/src/grading-rubric.md
+
