Fixed bad links on 5507-03-hw.md

--- a/modules/5507-03-hw.md
+++ b/modules/5507-03-hw.md
@@ -44,10 +44,10 @@ Graded: 3 points, one point deducted if submitted late.
 
 Not yet available.
 
-[git1a]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy01.csv
-[git2a]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy02.tsv
-[git3a]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy03.txt
-[git4a]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy04.csv
+[git1a]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/energy01.csv
+[git2a]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/energy02.tsv
+[git3a]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/energy03.txt
+[git4a]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/energy04.csv
 
 [git1b]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy01-data-dictionary.yaml
 [git2b]: https://github.com/pmean/introduction-to-SAS/blob/master/data/energy02-data-dictionary.yaml
