Added sas code for hw03 answers

--- a/modules/5507-03-hw.md
+++ b/modules/5507-03-hw.md
@@ -17,7 +17,7 @@ Homework03.
 
 Q1. The file [energy01.csv][git1a] is a comma delimited file. Details about this file are in its [data dictionary][git1b]. Read this file into SAS and print the first three rows of data. 
 
-Q2. The file [energy02.tsv][git2a] replaces the commas with tabs as delimiters. Details about this file are in its [data dictionary][git2b]. Read this file into SAS and print the first three rows of data. 
+Q2. The file [energy02.tsv][git2a] is the same data, but replaces the commas with tabs as delimiters. Details about this file are in its [data dictionary][git2b]. Read this file into SAS and print the first three rows of data. 
 
 Q3. The file [energy03.txt][git3a] is the same data but uses a fixed width format. Details about this file are in its [data dictionary][git3b]. Read this file into SAS and print the first three rows of data. 
 
