--- a/modules/5507-03-videos.md
+++ b/modules/5507-03-videos.md
@@ -9,30 +9,56 @@ knit: (function(inputFile, encoding) {
 
 ### Videos and handouts, Module03
 
-#### M03-V01. Delimited files
+#### M03-V01. Space delimited files
 
 + Video available in [Panopto format][m03v01]
 + Slides and speaker notes available in [pdf format][git1]
 
-#### M03-V02. First line variable names
+#### M03-V02. Comma delimited files
 
 + Video available in [Panopto format][m03v02]
-+ See above for slides and speaker notes
++ Slides and speaker notes, see above
 
-#### M03-V03. Evil tab character
+#### M03-V03. Tab delimited files
 
-+ Video available in [Panopto format][m03V03]
-+ Slides are not yet available
++ Video available in [Panopto format][m03v03]
++ Slides and speaker notes, see above
 
-#### M03-V04. If you still need a bit of help with the homework
+#### M03-V04. Tilde delimited files
 
 + Video available in [Panopto format][m03v04]
-+ Slides are not yet available
++ Slides and speaker notes, see above
 
-[git1]: https://umkc.instructure.com/courses/68719/modules/items/1002149
+#### M03-V05. Fixed width files
 
-[m03v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6de8440a-1bd4-4d2e-9631-aa7f015b2953
-[m03v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=4954f8af-d8be-4657-bc24-aa7f015edf92
-[m03v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0ce9339f-f3c9-4bb3-908e-aa790131a2a9
-[m03v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c53d9a11-aa2e-4ee0-ac8e-aa78017aaea2
++ Video available in [Panopto format][m03v05]
++ Slides and speaker notes, see above
 
+#### M03-V06. String data
+
++ Video available in [Panopto format][m03v06]
++ Slides and speaker notes, see above
+
+#### M03-V07. First line names
+
++ Video available in [Panopto format][m03v07]
++ Slides and speaker notes, see above
+
+#### M03-V99. Evil tab character
+
+Note: This recording was from an earlier class, and refers to a homework assignment that I ditched because it was too complicated. The video explains that a large part of the reason the assignment was confusing was because of the evil tab character. It explains very clearly why the tab character is evil. It is well worth watching, even though it references an obsolete homework assignment.
+
++ Video available in [Panopto format][m03V99]
++ Live demo, slides are not available
+
+[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m03-5507-simon-slides-and-speaker-notes.pdf
+
+[m03v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=f257dafa-1f47-40a4-a16a-ad5601435c74
+[m03v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6099f2b8-848f-4140-b185-ad560145001b
+[m03v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=b95a5be9-e282-41e0-aacc-ad5601461018
+[m03v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=47317047-c929-4377-a0ba-ad560147984f
+[m03v05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8081cdf5-d018-4fca-bd6a-ad5601484ad7
+[m03v06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dc031106-04cd-4ad3-a856-ad560149e53a
+[m03v07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=35ec8b62-2396-43d3-804c-ad56014c04ee
+
+[m03v99]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0ce9339f-f3c9-4bb3-908e-aa790131a2a9
