--- a/modules/5507-03-videos.md
+++ b/modules/5507-03-videos.md
@@ -44,6 +44,11 @@ knit: (function(inputFile, encoding) {
 + Video available in [Panopto format][m03v07]
 + Slides and speaker notes, see above
 
+#### M03-V08. Your homework
+
++ Video available in [Panopto format][m03v08]
++ Live demo, no slides or speaker notes
+
 #### M03-V99. Evil tab character
 
 Note: This recording was from an earlier class, and refers to a homework assignment that I ditched because it was too complicated. The video explains that a large part of the reason the assignment was confusing was because of the evil tab character. It explains very clearly why the tab character is evil. It is well worth watching, even though it references an obsolete homework assignment.
@@ -60,5 +65,6 @@ Note: This recording was from an earlier class, and refers to a homework assignm
 [m03v05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8081cdf5-d018-4fca-bd6a-ad5601484ad7
 [m03v06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dc031106-04cd-4ad3-a856-ad560149e53a
 [m03v07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=35ec8b62-2396-43d3-804c-ad56014c04ee
+[m03v08]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c5df8783-9221-4ff1-8b57-ad56015faa80
 
 [m03v99]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0ce9339f-f3c9-4bb3-908e-aa790131a2a9
