Started work on module04 slides and speaker notes

--- a/src/m03-slides-and-speaker-notes.Rmd
+++ b/src/m03-slides-and-speaker-notes.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Introduction to SAS, Importing a wide range of data formats"
 output: powerpoint_presentation
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "../results", output_format = "all") })  
 ---
 
 
