--- a/src/m04-slides-and-speaker-notes.Rmd
+++ b/src/m04-slides-and-speaker-notes.Rmd
@@ -19,18 +19,6 @@ suppressMessages(suppressWarnings(library(stringr)))
 
 ### Overview
 
-<div class="notes">
-
-author: Steve Simon
-date: created 2021-05-30
-purpose: to produce slides for module04 videos
-license: public domain
-
-Here is an overview of what I want to cover in module02.
-
-</div>
-
-### Categorical data
 + proc format
 + recoding
 + proc freq
@@ -38,177 +26,141 @@ Here is an overview of what I want to cover in module02.
 
 <div class="notes">
 
+author: Steve Simon
+date: created 2021-05-30
+purpose: to produce slides for module04 videos
+license: public domain
+
+Here is an overview of what I want to cover in this module.
+
 We're going to look at a different data set, one with mostly categorical variables. I'll introduce proc format, which allows you to attach labels to categorical data, talk about recoding, and show some tables using proc freq. I'll also show you a simple bar chart.
 
 </div>
 
-### SAS code: documentation header
-
 ```{r}
 tx <- readLines("m04-5507-simon-categorical-variables.sas")
-px <- function(tx, s1, s2, xtra_lines=-2) {
+
+zpad <- function(i) {ifelse(i <10, paste0("0", i), paste0(i))}
+```
+
+```{r}
+px <- function(tx, s1, s2, d1=0, d2=-2) {
   tx %>% str_which(s1) -> i1
   tx %>% str_which(s2) -> j1
   if (length(i1)==0) return("No beginning found")
   if (length(j1)==0) return("No ending found")
   if (length(i1) > 1) return("Multiple beginnings found")
   if (length(j1) > 1) return("Multiple endings found")
-  j1 <- j1 + xtra_lines
+  i1 <- i1 + d1
+  j1 <- j1 + d2
   tx %>%
     extract(i1:j1) %>%
-    paste0(collapse="\n") %>%
     return
 }
 ```
 
-```{}
-`r px(tx, "^/", "Part01")`
+```{r}
+co <- function(tx, i, d1=2, d2=-2) {
+  s1 <- paste0("Part", zpad(i))
+  s2 <- paste0("Notes", zpad(i))
+  px(tx, s1, s2, d1, d2) %>%
+    paste0(collapse="\n") %>%
+	return
+}
 ```
 
-<div class="notes">
-
-Here is the documentation header for a program that will show how to work with a dataset with mostly continuous variables.
-
-</div>
-
-### SAS code: filename, libname, ods statements
-
-```{}
-`r px(tx, "Part01", "Part02")`
+```{r}
+no <- function(tx, i, d1=0, d2=-2, part=0) {
+  s1 <- paste0("Notes", zpad(i))
+  s2 <- paste0("Part", zpad(i+1))
+  px(tx, s1, s2, d1, d2) %>%
+  	str_replace(fixed("* Notes"), "") %>%
+  	str_replace(";$", "") %>%
+	str_replace("^[0-9][0-9]. ", "") -> notes_text
+  if (part==0) return(paste0(notes_text, collapse="\n"))
+  blank_lines <- c(1, str_which(notes_text, "^\\s*$"), length(notes_text))
+  if (part > length(blank_lines)-1)
+    return(paste0(c("Error", blank_lines), collapse=","))
+  ra <- blank_lines[part]:blank_lines[part+1] 
+  return(paste0(notes_text[ra], collapse="\n"))
+}
 ```
 
-<div class="notes">
-
-The filename statement tells you where the raw data is stored.
-
-The libname statement tells you where SAS will store any permanent datsets.
-
-The ods statement tells you that SAS is going to store the results with a particular filename and in pdf format.
-
-</div>
-
-### Read the data using proc import
-
-```{}
-`r px(tx, "Part02", "Part03")`
+```{r}
+ti <- function(tx, i) {
+  s1 <- paste0("Part", zpad(i))
+  px(tx, s1, s1, 0, 0) %>%
+  	str_replace(fixed("* Part"), "") %>%
+	  str_replace("^....", "") %>%
+    return   
+}
 ```
 
-<div class="notes">
-
-As a general rule, proc import works 
-best for simple delimited files where
-the first row contains the variable 
-names. With complicated text files 
-(such as files where the data for an 
-individual extends across more than one
-line) or files without variable names
-in the first row are usually better 
-handled by a data step.
-
-</div>
-
-### SAS code: 
-
+### SAS code: `r ti(tx, 0)` <!--documentation header-->
 ```{}
-`r px(tx, "Part03", "Part04")`
+`r co(tx, 0)`
 ```
-
-<div class="notes">
-
+<div class="notes">`r no(tx, 0)`</div>
 
 
-</div>
+### SAS code: `r ti(tx, 1)` <!--where to find and store things-->
+```{}
+`r co(tx, 1)`
+```
+<div class="notes">`r no(tx, 1)`</div>
 
-### SAS output:
 
+### SAS code: `r ti(tx, 2)` <!--import-->
+```{}
+`r co(tx, 2)`
+```
+<div class="notes">`r no(tx, 2)`</div>
+
+### SAS code: `r ti(tx, 3)` <!--print-->
+```{}
+`r co(tx, 3)`
+```
+<div class="notes">`r no(tx, 3, part=1)`</div>
+
+### SAS output: `r ti(tx, 3)`
 ![SAS Output](../images/m04-5507-simon-categorical_01.png)
+<div class="notes">`r no(tx, 3, part=2)`</div>
 
-<div class="notes">
-
-If you look at the first few rows of
-data, you will see that the import went
-reasonably well. It is not always this
-easy. Do take notice that age is left
-justified. It is caused by a number of
-"NA" codes for missing values. You 
-don't see it here, but if you print a
-few more observations, you can see the
-"NA" values. It would have been easier
-to anticipate these ahead of time, but
-We'll fix things up after the fact.
-
-</div>
-
-### SAS code: 
-
+### SAS code: `r ti(tx, 4)` <!--freq-->
 ```{}
-`r px(tx, "Part04", "Part05")`
+`r co(tx, 4)`
 ```
+<div class="notes">`r no(tx, 4, part=1)`</div>
 
-<div class="notes">
-
-For any categorical variables, your 
-first step is to get frequency counts.
-
-</div>
-
-### SAS output:
-
+### SAS output: `r ti(tx, 4)` (1/2)
 ![SAS Output](../images/m04-5507-simon-categorical_02.png)
+<div class="notes">`r no(tx, 4, part=2)`</div>
 
-### SAS output:
-
+### SAS output: `r ti(tx, 4)` (2/2)
 ![SAS Output](../images/m04-5507-simon-categorical_03.png)
+<div class="notes">`r no(tx, 4, part=3)`</div>
 
-### SAS code: 
-
+### SAS code: `r ti(tx, 5)`  <!--convert-->
 ```{}
-`r px(tx, "Part05", "Part06")`
+`r co(tx, 5)`
 ```
+<div class="notes">`r no(tx, 5)`</div>
 
-<div class="notes">
-
-For the one continuous variable (age)
-you need to convert the code "NA" to 
-the SAS missing value code, which is a
-dot. The easiest way to do this is to
-force the data to numeric with a simple
-arithmetic equation like adding a zero.
-But you get a warning message for each
-occurence of NA, which can get tedious.
-The input function with two question
-marks avoids this issue.
-
-</div>
-
-### SAS output:
-
+### SAS output: `r ti(tx, 5)` (1/2)
 ![SAS Output](../images/m04-5507-simon-categorical_04.png)
+<div class="notes">`r no(tx, 5)`</div>
 
-### SAS output:
-
-![SAS Output](../images/m04-5507-simon-categorical_05.png)
-
-### SAS code: 
-
+### SAS code: `r ti(tx, 6)` <!--format-->
 ```{}
-`r px(tx, "Part06", "Part07")`
+`r co(tx, 6)`
 ```
+<div class="notes">`r no(tx, 6)`</div>
 
-<div class="notes">
+### SAS output: `r ti(tx, 6)` 
+![SAS Output](../images/m04-5507-simon-categorical_05.png)
+<div class="notes">`r no(tx, 6)`</div>
 
-For variables like Survived which are
-numbers, but the numbers represent a
-particular category, you can document
-this using a format statement.
-
-</div>
-
-### SAS output:
-
-![SAS Output](../images/m04-5507-simon-categorical_06.png)
-
-### SAS code: 
+### SAS code: Creating bar charts
 
 ```{}
 `r px(tx, "Part07", "Part08")`
@@ -221,11 +173,11 @@ they do have their uses.
 
 </div>
 
-### SAS output:
+### SAS output:  Creating bar charts
 
-![SAS Output](../images/m04-5507-simon-categorical_07.png)
+![SAS Output](../images/m04-5507-simon-categorical_06.png)
 
-### SAS code: 
+### SAS code: Percentages for bar chart
 
 ```{}
 `r px(tx, "Part08", "Part09")`
@@ -233,28 +185,17 @@ they do have their uses.
 
 <div class="notes">
 
-Getting percentages is a bit tricky. You
-have to run proc freq and output the 
-results to a new data file, pct_survived.
-I am using the noprint option, because
-I only want the percentages for internal
-use. It wouldn't have hurt anything to 
-print out a bit extra, but I want to 
-encourage you to limit the amount of
-output that you present to a consulting
-client.
+Getting percentages is a bit tricky. You have to run proc freq and output the results to a new data file, pct_survived. I am using the noprint option, because I only want the percentages for internal use. It wouldn't have hurt anything to print out a bit extra, but I want to encourage you to limit the amount of output that you present to a consulting client.
 
-Note the yaxis maxx=100 statement which
-expands the upper limit of the y axis 
-to 100%.
+Note the yaxis max=100 statement which expands the upper limit of the y axis  to 100%.
 
 </div>
 
-### SAS output:
+### SAS output: Percentages for bar chart
 
-![SAS Output](../images/m04-5507-simon-categorical_08.png)
+![SAS Output](../images/m04-5507-simon-categorical_07.png)
 
-### SAS code: 
+### SAS code: Crosstabulation
 
 ```{}
 `r px(tx, "Part09", "Part10")`
@@ -262,17 +203,15 @@ to 100%.
 
 <div class="notes">
 
-To examine relationships among 
-categorical variables use a two 
-dimensional crosstabulation.
+To examine relationships among categorical variables use a two dimensional crosstabulation.
 
 </div>
 
-### SAS output:
+### SAS output: Crosstabulation
 
-![SAS Output](../images/m04-5507-simon-categorical_09.png)
+![SAS Output](../images/m04-5507-simon-categorical_08.png)
 
-### SAS code: 
+### SAS code: Converting a continuous variable to categorical (1/2)
 
 ```{}
 `r px(tx, "Part10", "Part11")`
@@ -289,11 +228,7 @@ statements
 
 </div>
 
-### SAS output:
-
-![SAS Output](../images/m04-5507-simon-categorical_10.png)
-
-### SAS code: 
+### SAS code: Converting a continuous variable to categorical (2/2)
 
 ```{}
 `r px(tx, "Part11", "Part12")`
@@ -301,16 +236,25 @@ statements
 
 <div class="notes">
 
-Always cross check your results against
-the original variable.
+Always cross check your results against the original variable.
 
 </div>
 
-### SAS output:
+### SAS output: Converting a continuous variable to categorical (1/2)
 
-![SAS Output](../images/m04-5507-simon-categorical_11.png)
+![SAS Output](../images/m04-5507-simon-categorical_09.png)
 
-### SAS code: 
+### SAS output: Converting a continuous variable to categorical (2/2)
+
+![SAS Output](../images/m04-5507-simon-categorical_10.png)
+
+<div class="notes">
+
+Notice that the order for age_cat is alphabetical, which is probably not what you want. You can control the order by using number codes and formats.
+
+</div>
+
+### SAS code: Converting a continuous variable to categorical (2/2)
 
 ```{}
 `r px(tx, "Part12", "Part13")`
@@ -318,19 +262,22 @@ the original variable.
 
 <div class="notes">
 
-Notice that the order for age_cat is 
-alphabetical, which is probably not
-what you want. You can control the 
-order by using number codes and 
-formats.
+You'd like these tables orderd from toddler to pre-teen to teenager to adult, then missing.
 
 </div>
 
-### SAS output:
 
-![SAS Output](../images/m04-5507-simon-categorical_12.png)
+### SAS output: A better conversion
 
-### SAS code: 
+![SAS Output](../images/m04-5507-simon-categorical_11.png)
+
+<div class="notes">
+
+Here is the trick to get things ordered properly. Use a number code in the conversion and then add labels with proc format.
+
+</div>
+
+### SAS code: A better conversion
 
 ```{}
 `r px(tx, "Part13", "Part14")`
@@ -344,7 +291,7 @@ format.
 
 </div>
 
-### SAS output:
+### SAS output: A better conversion
 
 ![SAS Output](../images/m04-5507-simon-categorical_13.png)
 
@@ -451,7 +398,6 @@ Here is what the output from proc freq looks like. Just two rows.
 
 ### Percentages in a bar chart
 
-![Output, proc sgplot](../images/lecture02-08.png)
 
 <div class="notes">
 
@@ -461,7 +407,6 @@ Here is what the output from proc freq looks like. Just two rows.
 
 ### Percentages, proc freq
 
-![Output, proc freq](../images/lecture02-09.png)
 
 <div class="notes">
 
@@ -471,7 +416,6 @@ Here is what the output from proc freq looks like. Among the males, almost 5/6 d
 
 ### Recoding age (1 / 3)
 
-![Output, proc means](../images/lecture02-10.png)
 
 <div class="notes">
 
@@ -481,7 +425,6 @@ Here is the quality check. Notice that adult starts at 21. Should adult start at
 
 ### Recoding age (2 / 3)
 
-![Output, proc means](../images/lecture02-11.png)
 
 <div class="notes">
 
@@ -491,7 +434,6 @@ Are the ranges for pre-teen and teenager reasonable?
 
 ### Recoding age (3 / 3)
 
-![Output, proc means](../images/lecture02-12.png)
 
 <div class="notes">
 
@@ -501,7 +443,6 @@ How about the ranges for toddler?
 
 ### Better age recode (1 /3)
 
-![Output, proc means](../images/lecture02-13.png)
 
 <div class="notes">
 
@@ -511,8 +452,6 @@ This shows the age categories starting at the youngest: toddler and pre-teen...
 
 ### Better age recode (2 /3)
 
-![Output, proc means](../images/lecture02-14.png)
-
 <div class="notes">
 
 followed y teenager and adult...
@@ -521,7 +460,6 @@ followed y teenager and adult...
 
 ### Better age recode (3 /3)
 
-![Output, proc means](../images/lecture02-15.png)
 
 <div class="notes">
 
