Started work on hw04 answers

--- a/modules/5507-04-hw.md
+++ b/modules/5507-04-hw.md
@@ -15,25 +15,18 @@ Graded: 3 points, one point deducted if submitted late.
 
 The Gardasil vaccine requires three shots in order to be effective. A study conducted at Johns Hopkins looked at how often patients failed to get all three shots. They wanted to see if insurance status, age, and other factors could predict who was at greatest risk for failing to get all three shots.
 
-The data set is available as an Excel spreadsheet at
+The data set is available as a comma separated file with variable names in the first row. It is available on [my github site][git1]. You can find details about the dataset on the [data repository for the Journal of Statistics Education][jse1].
 
-http://www.amstat.org/publications/jse/v19n1/gardasil.xls
 
-and a description of the file is available at
-
-http://www.amstat.org/publications/jse/v19n1/gardasil.txt
-
-Q1. Create factors for AgeGroup, Race, Completed, Location.
+Q1. Display frequency counts for AgeGroup, Race, Completed, Location. Be sure to use labels rather than number codes. Which category occurs most frequently for each variable?
 
 Q2. Report which variables have missing data and how many of these values are missing.
 
-Q3. What proportion of patients completed all three shots?
+Q3. Draw a bar chart showing the number of patients at each of the four locations.
 
-Q4. Draw a bar chart showing the percentage of patients at each of the four locations.
+Q4. Use a crosstabulation to compare Age to AgeGroup. Hint: use Age as the rows and do not display row, column, or cell percents. Are the recodings into AgeGroup done consistently?
 
-Q5. Use a crosstabulation to compare Age to AgeGroup, and Location to LocationType. Are the recodings into AgeGroup and LocationType done properly?
-
-Q6. Create a new variable that combines the race categories into white, and non-white. Calculate the proportion of white patients at each of the four locations.
+Q5. Create a new variable that combines the race categories into white, and non-white. Calculate the proportion of white patients at each of the four locations. Hint: use the new white/non-white variable as the columns and compute row percents.
 
 #### Discuss04
 
@@ -50,3 +43,6 @@ I'd like some brief feedback to the videos you just watched. Keep it short. One 
 
 Graded: 3 points, one point deducted if submitted late.
 
+[git1]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/gardasil.csv
+
+[jse1]: http://jse.amstat.org/v19n1/gardasil.txt
