Finalized module04 homework answers

--- a/modules/5507-04-hw.md
+++ b/modules/5507-04-hw.md
@@ -18,7 +18,7 @@ The Gardasil vaccine requires three shots in order to be effective. A study cond
 The data set is available as a comma separated file with variable names in the first row. It is available on [my github site][git1]. You can find details about the dataset on the [data repository for the Journal of Statistics Education][jse1].
 
 
-Q1. Display frequency counts for AgeGroup, Race, Completed, Location. Be sure to use labels rather than number codes. Which category occurs most frequently for each variable?
+Q1. Display frequency counts for AgeGroup, Race, Completed, Location. Be sure to use proc format to display your frequencies using short text descriptors rather than number codes. Which category occurs most frequently for each variable?
 
 Q2. Report which variables have missing data and how many of these values are missing.
 
