Linked module04 answers to github site

--- a/modules/5507-04-hw.md
+++ b/modules/5507-04-hw.md
@@ -22,11 +22,11 @@ Q1. Display frequency counts for AgeGroup, Race, Completed, Location. Be sure to
 
 Q2. Report which variables have missing data and how many of these values are missing.
 
-Q3. Draw a bar chart showing the number of patients at each of the four locations.
+Q3. Draw a bar chart showing the number of patients at each of the four locations. Which location has the fewest patients?
 
 Q4. Use a crosstabulation to compare Age to AgeGroup. Hint: use Age as the rows and do not display row, column, or cell percents. Are the recodings into AgeGroup done consistently?
 
-Q5. Create a new variable that combines the race categories into white, and non-white. Calculate the proportion of white patients at each of the four locations. Hint: use the new white/non-white variable as the columns and compute row percents.
+Q5. Create a new variable that combines the race categories into white, and non-white. Calculate the proportion of white patients at each of the four locations. What location had the greatest proportion of non-white patients? Hint: use the new white/non-white variable as the columns and compute row percents.
 
 #### Discuss04
 
